--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <p>This is a dev environment.</p>
+    <p>This is a prod environment.</p>
   </body>
 </html>
